<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="@color/white">
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:layout_width="fill_parent" style="@style/title_text"
			android:text="@string/about" />
		<ImageView android:id="@+id/title" android:layout_width="wrap_content"
			android:layout_height="wrap_content" style="@style/title_logo" />
	</RelativeLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content"  android:layout_weight="1" android:orientation="vertical"
		android:padding="6dp">
		<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
			android:src="@drawable/logo" />
		<TextView android:id="@+id/text_app" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="center_horizontal"
			android:text="@string/app_name" android:textColor="@color/black"
			android:textAppearance="?android:attr/textAppearanceLarge">
		</TextView>
		<ScrollView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_weight="1"
			android:layout_marginTop="10dp">
			<TextView android:id="@+id/text_about" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:gravity="center_horizontal"
				android:text="@string/text_about" android:autoLink="all" android:textColor="@color/black">
			</TextView>
		</ScrollView>
		<Button android:id="@+id/btn_site" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/site"></Button>
		<Button android:id="@+id/btn_blog" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/blog"></Button>
		<Button android:id="@+id/btn_tweet" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/tweet"></Button>
	</LinearLayout>
</LinearLayout>