<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="@color/white">
	<RelativeLayout android:id="@+id/title_bar"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:id="@+id/title" android:layout_width="fill_parent"
			style="@style/title_text" android:text="@string/title_send_sms" />
		<ImageView android:layout_width="wrap_content"
			android:layout_height="wrap_content" style="@style/title_logo" />
	</RelativeLayout>
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:orientation="vertical" android:gravity="center">
		<ListView android:id="@+id/list_sms" android:layout_width="fill_parent"
			android:layout_height="fill_parent" android:cacheColorHint="@color/white" android:visibility="gone" />
		<TextView android:id="@+id/help_no_sms"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			style="@style/hint" android:text="@string/help_no_sms" />
	</LinearLayout>
	<CheckBox android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:checked="true"
		android:enabled="false" android:text="@string/cb_clear_sms" android:textColor="@color/gray"/>
	<Button android:id="@+id/btn_send_sms" android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:text="@string/btn_send_sms" />
</LinearLayout>