<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2011 Android Monsters Licensed under the Apache License,
		Version 2.0 (the "License"); you may not use this file except in
		compliance with the License. You may obtain a copy of the License at

		http://www.apache.org/licenses/LICENSE-2.0 Unless required by
		applicable law or agreed to in writing, software distributed under the
		License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
		CONDITIONS OF ANY KIND, either express or implied. See the License for
		the specific language governing permissions and limitations under the
		License.
	-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="@color/white">
	<RelativeLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		<TextView android:layout_width="fill_parent" style="@style/title_text"
			android:text="@string/login" />
		<ImageView android:id="@+id/title" android:layout_width="wrap_content"
			android:layout_height="wrap_content" style="@style/title_logo" />
	</RelativeLayout>
	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:layout_weight="1"
		android:layout_below="@+id/title_bar" android:layout_margin="5dp">
		<TableLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" style="@style/group">
			<TableRow android:gravity="center_vertical">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" style="@style/label"
					android:text="@string/label_email" />
				<EditText android:id="@+id/edit_email"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_weight="1" android:singleLine="true"
					android:gravity="top" android:inputType="textEmailAddress"
					android:imeOptions="actionNext" />
			</TableRow>
			<TableRow android:gravity="center_vertical">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" style="@style/label"
					android:text="@string/label_password" />
				<EditText android:id="@+id/edit_password"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_weight="1" android:singleLine="true"
					android:inputType="textPassword" android:imeOptions="actionDone" />
			</TableRow>
		</TableLayout>
	</ScrollView>
	<Button android:id="@+id/btn_login" android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/login" /> 
</LinearLayout>